# ShaderEditor

./: CMakeLists.txt  Project.cpp  Project.h  README.md  main.cpp
code_analyzer/: CodeAnalyzer.cpp  CodeAnalyzer.h  StringHandler.cpp  StringHandler.h
project_windows/: CodeEditorWindow.cpp  CodeEditorWindow.h  InProjectWindow.h  InspectorWindow.cpp  InspectorWindow.h  PreviewWindow.cpp  PreviewWindow.h
resource_manager/: Mesh.cpp  RenderTexture.h  Shader.cpp  Shader.h
utils/: Camera.cpp  Camera.h  EditableShader.cpp  EditableShader.h  Mesh.cpp  Mesh.h  RenderTexture.cpp  Vertex.h  global_vars.cpp  global_vars.h  primitives.cpp  primitives.h
